--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=gestionFacturation
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Facturation
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:5432/facturation
+spring.datasource.username=chaimaa
+spring.datasource.password=chaimaa123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
