--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=gestionFacturation
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/facturation
-spring.datasource.username=chaimaa
-spring.datasource.password=chaimaa123
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
