--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+<!--        pdf -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.24</version> <!-- Check for the latest version -->
+        </dependency>
 
 
     </dependencies>
